--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <nav></nav>
         <div class="banner">
             <div class="banner-text">
-                <h1>Lorem ipsum <br> dolor sit amet consectetur <br> adipisicing elit.</h1>
+                <h1>GERMAN
+                    <br>NATIONAL <br>FOOTBALL
+                    SQAD
+                </h1>
 
             </div>
             <div class="banner-left"><img src="banner-left-img/2.png" alt=""></div>
@@ -32,15 +35,104 @@
                         <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
                         <div class="player-profile">
 
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
+                            <h3>Manuel Neuer </h3>
+                            <p>Although he's just turned 35, Manuel Neuer undoubtedly remains one of the best
+                                goalkeepers in the game. It was his fifth Goalkeeper of the Year award, equalling the
+                                record set by fellow goalkeeping greats, Iker Casillas and Gianluigi Buffon.</p>
 
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/8.jpg" alt=""></div>
+                        <div class="player-profile">
+
+                            <h3>Thomas Muller </h3>
+                            <p>There's some madness in the concept that Thomas Muller is just damn good at everything -
+                                without being too good anything. And he's especially good at the things that you don't
+                                see. ... In his last three seasons at Bayern, Muller has hit over a combined total of 30
+                                goals and assists for his club.Müller has enjoyed a highly successful international
+                                career to date. Voted best young player at the World Cup in South Africa – where Germany
+                                finished third - he also won the Golden Boot after scoring five goals and providing
+                                three assists.</p>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-profile player-profile-img"><img src="imgplayer/5.jpg" alt=""></div>
+                        <div class="player-profile">
+
+                            <h3>Jamal Musiala</h3>
+                            <p>Jamal Musiala became Germany's youngest-ever player at a major tournament when he came on
+                                against Hungary, making an immediate impact. His former coach told DW about Musiala's
+                                path from English talent to German star.
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-profile player-profile-img"><img src="imgplayer/2.jpg" alt=""></div>
+                        <div class="player-profile">
+
+                            <h3>Leroy Sane</h3>
+                            <p>
+                                Sane is a left-footed player who can operate on either flank as a winger. The German
+                                possesses blistering pace and is one of the most fleet-footed attackers in the world.
+                                Moreover, his finishing is superb and he has been a prolific goal-scorer and assist
+                                provider for his club.
+
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-profile player-profile-img"><img src="imgplayer/4.jpg" alt=""></div>
+                        <div class="player-profile">
+
+                            <h3>Jonas Hofmann</h3>
+                            <p>Hofmann began his club career in 1998 playing at FC Rot in the municipality of St.
+                                Leon-Rot and remained there until the end of the 2003–2004 season, before he moved to
+                                1899 Hoffenheim in the 2004–2005 season. Hofmann debuted for TSG 1899 Hoffenheim second
+                                team in a 1–0 victory in April 2011 during the 2010–2011 season. At the end of the
+                                2010–2011 season playing for TSG 1899 Hoffenheim II, Hofmann made five league
+                                appearances, in which he scored two goals.
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-profile player-profile-img"><img src="imgplayer/6.jpg" alt="">
+                        </div>
+                        <div class="player-profile">
+
+                            <h3>
+                                Joshua Kimmich
+                            </h3>
+                            <p>
+                                Joshua Kimmich
+                                Kimmich selected in the UEFA Euro 2016 Germany team. He started for Germany against
+                                Northern Ireland. He played all the matches for the team in the tournament. Germany
+                                reached the semi-finals in the tournament. Kimmich was named in the UEFA team of the
+                                tournament.
+
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-profile player-profile-img"><img src="imgplayer/7.jpg" alt=""></div>
+                        <div class="player-profile">
+
+                            <h3> Matthias Lukas Ginter </h3>
+                            <p>
+
+                                Matthias Lukas Ginter (born 19 January 1994) is a German professional footballer who
+                                plays as a centre back for Bundesliga club Borussia Mönchengladbach and the Germany
+                                national team.</p>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-profile player-profile-img"><img src="imgplayer/8.jpg" alt=""></div>
                         <div class="player-profile">
 
                             <h3>Lorem, ipsum dolor.</h3>
@@ -51,138 +143,116 @@
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/9.jpg" alt=""></div>
                         <div class="player-profile">
 
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
+                            <h3>Toni Kroos</h3>
+                            <p>Kroos made it to the heights of glory very early in his career. After making his debut
+                                for the German National team in 2010, he also made it to the side that went on to reach
+                                the semi-finals of the 2010 World Cup and also the UEFA Euro 2012. He was also a part of
+                                the 2014 World Cup winning team. He performed so well that he won the Assist Leader of
+                                the tournament. At the club level also, he performed very well during these years and
+                                earned the reputation as one of the best midfielders in the entire world.</p>
 
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/10.jpg" alt=""></div>
                         <div class="player-profile">
 
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
+                            <h3>YOUNES AMIN</h3>
+                            <p>
+                                In May 2017, Younes was called up to the German national team as part of the squad for
+                                the 2017 FIFA Confederations Cup. Eventually, he made his international debut on 6 June
+                                2017 against Denmark when he came in as a substitute.
+
+                                Younes scored his first International goal against San Marino on 10 June 2017. In his
+                                five appearances for the German national team, he has scored two goals and has an assist
+                                to his name.
+                            </p>
 
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/11.jpg" alt=""></div>
                         <div class="player-profile">
 
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
+                            <h3>Antonio Ruediger</h3>
+                            <p>He had a very impressive season during 2015-16. For instance, on February 2016, Rudiger
+                                scored a goal in only the 4th minute of the match against AC Milan. His ruthless
+                                determination and spirit helped him to get regular matches for both his club team and
+                                national team. This earned him a transfer in one of the leading clubs, Chelsea for a
+                                reported fee of £29 million. In 2017, he was also part of the squad that won the 2017
+                                FIFA Confederations Cup.
+                            </p>
 
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt="">
-                        </div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/12.jpg" alt=""></div>
                         <div class="player-profile">
 
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
-
-                        </div>
-                    </div>
-                    <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
-                        <div class="player-profile">
-
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
-
-                        </div>
-                    </div>
-                    <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
-                        <div class="player-profile">
-
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
-
-                        </div>
-                    </div>
-                    <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
-                        <div class="player-profile">
-
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
-
-                        </div>
-                    </div>
-                    <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
-                        <div class="player-profile">
-
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
-
-                        </div>
-                    </div>
-                    <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
-                        <div class="player-profile">
-
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
-
-                        </div>
-                    </div>
-                    <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/1.jpg" alt=""></div>
-                        <div class="player-profile">
-
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
+                            <h3>Emre Can</h3>
+                            <p>A German-born professional central midfielder player is Emre Can. He has played in the
+                                English Premier League, Bundesliga, and Serie A. He also plays for the National Team of
+                                Germany. He is a great versatile player where he has played defensive midfielder,
+                                central back, and full back. He has several club titles while playing for Bayern Munich
+                                and Juventus. He is currently playing for the German club Borussia Dortmund. As of 2020,
+                                he has appeared in the 25 international games for Germany and has scored a goal. As of
+                                June 2020, he has appeared in 303 games for different clubs and scored 28 goals.
+                            </p>
 
                         </div>
                     </div>
                 </div>
             </section>
         </article>
+        <!-- /* .........player..finish.......... */ -->
+
+        <!-- /* .........player..finish.......... */ -->
+
+        <!-- /* .........player..finish.......... */ -->
+
+
+
+
+
+        <!-- /* video section */
+  /* video section */
+  /* video section */ -->
 
         <article>
             <section>
 
                 <div class="tv-vedio">
                     <div class="video-text">
-                        <h2>Lorem ipsum dolor, si</h2>
-                        <p>texttext Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus similique
-                            molestiae ratione placeat, quaerat eos hic eveniet doloribus saepe fugit, facere voluptatem
-                            natus dolores. Sapiente explicabo quis totam odit. Velit.</p>
+                        <span id="video-text-heading">
+                            <h2>Congratulations Italy</h2>
+                        </span>
+                        <p>
+
+
+
+                            Congratulations from the EU and Germany for Italy's victory in the European Football
+                            Championships, with the President of the European Commission, Ursula von der Leyen, "very
+                            happy" for the Azzurri's victory, while the German Chancellor Angela ... (HANDLE)</p>
                     </div>
                     <div class="coch">
-                        <img src="legends/coch.jpg" alt="">
+                        <img src="banner-left-img/congresitaly.jpg" alt="">
                     </div>
 
             </section>
+            <!-- /* video section  finish*/
+            /* video section finish */
+            /* video section finish */ -->
+            <!-- newstodAY            -->
+            <!-- newstodAY            -->
+            <!-- newstodAY            -->
 
             <section>
-                <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                <span id="NEWS-TODAY">
+                    <h2> NEWS TODAY</h2>
+                </span>
                 <div class="news">
                     <div class="recent-news">
                         <div class="news-img">
@@ -223,6 +293,11 @@
 
             </section>
         </article>
+
+        <!-- newstodAY            -->
+        <!-- newstodAY            -->
+        <!-- newstodAY            -->
+
         <article>
             <section>
                 <div class="leaders">
@@ -237,7 +312,7 @@
 
 
 
-                    </div>
+                        <!-- </div>
                     <div class="legend-pic">
                         <div class="le-pic"> <img src="legends/Gerd Muller.jpg" alt=""></div>
                         <div class="legend-text">
@@ -269,7 +344,7 @@
                                 minus
                                 nihil
                                 laboriosam.</p>
-                        </div>
+                        </div> -->
 
 
 
@@ -287,7 +362,7 @@
 
         </article>
         <footer>
-
+            <h5>Copyright &#169 2021 Football UMME SALMA</h5>
         </footer>
 
 
