--- a/index.html
+++ b/index.html
@@ -300,51 +300,51 @@
 
         <article>
             <section>
+                <span id="our-legends">
+                    <h2>OURE LEGENDS</h2>
+                </span>
                 <div class="leaders">
                     <div class="legend-pic">
                         <div class="le-pic"> <img src="legends/Gerd Muller.jpg" alt=""></div>
                         <div class="legend-text">
-                            <p>Lorem, ipsum dolor sit amet consectetur <br> adipisicing elit. Maxime fuga sequi <br>
-                                minus
-                                nihil
-                                laboriosam.</p>
-                        </div>
-
-
-
-                        <!-- </div>
-                    <div class="legend-pic">
-                        <div class="le-pic"> <img src="legends/Gerd Muller.jpg" alt=""></div>
-                        <div class="legend-text">
-                            <p>Lorem, ipsum dolor sit amet consectetur <br> adipisicing elit. Maxime fuga sequi <br>
-                                minus
-                                nihil
-                                laboriosam.</p>
+                            <p>The Bomber' Mueller, who won the World <br> Cup in 1974 and countless domestic and
+                                European <br>
+                                titles with Bayern Munich, suffers from
+                            </p>
                         </div>
 
 
 
                     </div>
                     <div class="legend-pic">
-                        <div class="le-pic"> <img src="legends/Gerd Muller.jpg" alt=""></div>
+                        <div class="le-pic"> <img src="legends/fritz-walter.jpg" alt=""></div>
                         <div class="legend-text">
-                            <p>Lorem, ipsum dolor sit amet consectetur <br> adipisicing elit. Maxime fuga sequi <br>
-                                minus
-                                nihil
-                                laboriosam.</p>
+                            <p>Walter debuted with the German national team <br> Walter debuted with the German national
+                                team
+                                in 1940 under Sepp Herberger, and scored a hat-trick against Romania.</p>
                         </div>
 
 
 
                     </div>
                     <div class="legend-pic">
-                        <div class="le-pic"> <img src="legends/Gerd Muller.jpg" alt=""></div>
+                        <div class="le-pic"> <img src="legends/gettyimages-493892123-612x612.jpg" alt=""></div>
+                        <div class="legend-text">
+                            <p>hroughout his career, Muller had scored a remarkable <br> Throughout his career, Muller
+                                had scored a remarkable 582 goals in 669 appearances, </p>
+                        </div>
+
+
+
+                    </div>
+                    <div class="legend-pic">
+                        <div class="le-pic"> <img src="legends/gettyimages-515407098-612x612.jpg" alt=""></div>
                         <div class="legend-text">
                             <p>Lorem, ipsum dolor sit amet consectetur <br> adipisicing elit. Maxime fuga sequi <br>
                                 minus
                                 nihil
                                 laboriosam.</p>
-                        </div> -->
+                        </div>
 
 
 
