--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     SQAD
                 </h1>
 
+                <div class="WACH_LIVE">
+                    <div class="led"><a href="" style="color: white">WACH LIVE</a></div>
+                </div>
             </div>
             <div class="banner-left"><img src="banner-left-img/2.png" alt=""></div>
         </div>
@@ -132,13 +135,12 @@
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/8.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/3.jpg" alt=""></div>
                         <div class="player-profile">
 
-                            <h3>Lorem, ipsum dolor.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque veniam facilis
-                                perspiciatis
-                                velit iure ratione provident repudiandae tenetur quasi.</p>
+                            <h3>Kai Havertz.</h3>
+                            <p>Kai Havertz statistics – 22 years_old Chelsea Midfielder (Centre, Right) / Forward​.
+                                Check out his latest detailed stats including goals, assists, strengths ...</p>
 
                         </div>
                     </div>
@@ -236,11 +238,19 @@
                             Congratulations from the EU and Germany for Italy's victory in the European Football
                             Championships, with the President of the European Commission, Ursula von der Leyen, "very
                             happy" for the Azzurri's victory, while the German Chancellor Angela ... (HANDLE)</p>
+
+
                     </div>
                     <div class="coch">
                         <img src="banner-left-img/congresitaly.jpg" alt="">
                     </div>
 
+
+
+
+                    <div class="WACH_LIVE">
+                        <a href="" style="color: white">WACH LIVE</a>
+                    </div>
             </section>
             <!-- /* video section  finish*/
             /* video section finish */
@@ -257,36 +267,34 @@
                     <div class="recent-news">
                         <div class="news-img">
                             <img src="imgplayer/a.jpg" alt="">
-                            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, dolores adipisci vero
-                                inventore cum magnam?</p>
+                            <h2>COULD GERMANY COME BACK ?</h2>
+                            <p> Should Germany fans be excited for 2022? ... Well, here are three reasons to believe
+                                Germany can actually pull this off — against ... BPW's Euro 2020 MD11: Austria </p>
                         </div>
                     </div>
                     <div class="recent-news">
                         <div class="news-img">
                             <img src="imgplayer/b.jpg" alt="">
-                            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                            <p>Dolorum quae voluptatibus quidem in nulla! Modi impedit illo assumenda odio est! Vel,
-                                quia
-                                debitis.</p>
+                            <h2>WE ARE IN BIG DREAM </h2>
+                            <p>There's absolutely nothing wrong with it. And if your dreams don't scare you, then
+                            </p>
                         </div>
                     </div>
                     <div class="recent-news">
                         <div class="news-img">
                             <img src="imgplayer/c.jpg" alt="">
-                            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                            <p>Quam esse placeat commodi molestiae error ducimus aperiam inventore, consectetur quasi
-                                vitae
-                                delectus saepe consequuntur.</p>
+                            <h2>Jamal Musiala Return From Injury</h2>
+                            <p> According to Sport1, Musiala has been struggling with a hip injury. This injury has
+                                forced him to train individually on the grass. The report from </p>
                         </div>
                     </div>
                     <div class="recent-news">
                         <div class="news-img">
                             <img src="imgplayer/d.jpg" alt="">
-                            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                            <p>Accusantium minima obcaecati qui facere sint! Vitae ipsam aliquid odio accusantium
-                                placeat
-                                ut, quae nisi!</p>
+                            <h2>Joachim Low get Another Chance</h2>
+                            <p> The next generation will get another chance after the European Championship under
+                                incoming coach Hansi Flick, but for now the focus is very ...
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -294,9 +302,18 @@
             </section>
         </article>
 
-        <!-- newstodAY            -->
-        <!-- newstodAY            -->
-        <!-- newstodAY            -->
+        <!-- newstodAY    finish        -->
+        <!-- newstodAY    finish        -->
+        <!-- newstodAY    finish        -->
+        <!-- newstodAY    finish        -->
+
+        <!-- legendl start -->
+        <!-- legendl start -->
+        <!-- legendl start -->
+        <!-- legendl start  -->
+
+
+
 
         <article>
             <section>
@@ -352,15 +369,31 @@
 
 
 
-
-
                 </div>
 
 
 
             </section>
 
+
+            <!-- legendl finish-->
+            <!-- legendl finish-->
+            <!-- legendl finish -->
+
+
         </article>
+
+
+        <!-- EXTRA -->
+
+
+
+
+
+
+        <!-- EXTRA -->
+
+
         <footer>
             <h5>Copyright &#169 2021 Football UMME SALMA</h5>
         </footer>
