--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 
 <body>
@@ -46,7 +47,7 @@
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/8.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/2.jpg" alt=""></div>
                         <div class="player-profile">
 
                             <h3>Thomas Muller </h3>
@@ -61,7 +62,7 @@
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/5.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/3.jpg" alt=""></div>
                         <div class="player-profile">
 
                             <h3>Jamal Musiala</h3>
@@ -73,7 +74,7 @@
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/2.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/4.jpg" alt=""></div>
                         <div class="player-profile">
 
                             <h3>Leroy Sane</h3>
@@ -88,7 +89,7 @@
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/4.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/5.jpg" alt=""></div>
                         <div class="player-profile">
 
                             <h3>Jonas Hofmann</h3>
@@ -135,7 +136,7 @@
                         </div>
                     </div>
                     <div class="player">
-                        <div class="player-profile player-profile-img"><img src="imgplayer/3.jpg" alt=""></div>
+                        <div class="player-profile player-profile-img"><img src="imgplayer/8.jpg" alt=""></div>
                         <div class="player-profile">
 
                             <h3>Kai Havertz.</h3>
@@ -224,12 +225,12 @@
   /* video section */ -->
 
         <article>
-            <section>
+            <section class="video-cong">
 
                 <div class="tv-vedio">
                     <div class="video-text">
-                        <span id="video-text-heading">
-                            <h2>Congratulations Italy</h2>
+                        <span class="video-text-heading">
+                            <h3>Congratulations Italy</h3>
                         </span>
                         <p>
 
@@ -248,9 +249,7 @@
 
 
 
-                    <div class="WACH_LIVE">
-                        <a href="" style="color: white">WACH LIVE</a>
-                    </div>
+
             </section>
             <!-- /* video section  finish*/
             /* video section finish */
@@ -260,7 +259,7 @@
             <!-- newstodAY            -->
 
             <section>
-                <span id="NEWS-TODAY">
+                <span class="NEWS-TODAY">
                     <h2> NEWS TODAY</h2>
                 </span>
                 <div class="news">
@@ -317,13 +316,13 @@
 
         <article>
             <section>
-                <span id="our-legends">
+                <span class="our-legends">
                     <h2>OURE LEGENDS</h2>
                 </span>
                 <div class="leaders">
                     <div class="legend-pic">
                         <div class="le-pic"> <img src="legends/Gerd Muller.jpg" alt=""></div>
-                        <div class="legend-text">
+                        <div class="legend-text ">
                             <p>The Bomber' Mueller, who won the World <br> Cup in 1974 and countless domestic and
                                 European <br>
                                 titles with Bayern Munich, suffers from
@@ -335,7 +334,7 @@
                     </div>
                     <div class="legend-pic">
                         <div class="le-pic"> <img src="legends/fritz-walter.jpg" alt=""></div>
-                        <div class="legend-text">
+                        <div class="legend-text ">
                             <p>Walter debuted with the German national team <br> Walter debuted with the German national
                                 team
                                 in 1940 under Sepp Herberger, and scored a hat-trick against Romania.</p>
@@ -346,7 +345,7 @@
                     </div>
                     <div class="legend-pic">
                         <div class="le-pic"> <img src="legends/gettyimages-493892123-612x612.jpg" alt=""></div>
-                        <div class="legend-text">
+                        <div class="legend-text ">
                             <p>hroughout his career, Muller had scored a remarkable <br> Throughout his career, Muller
                                 had scored a remarkable 582 goals in 669 appearances, </p>
                         </div>
@@ -356,7 +355,7 @@
                     </div>
                     <div class="legend-pic">
                         <div class="le-pic"> <img src="legends/gettyimages-515407098-612x612.jpg" alt=""></div>
-                        <div class="legend-text">
+                        <div class="legend-text ">
                             <p>Lorem, ipsum dolor sit amet consectetur <br> adipisicing elit. Maxime fuga sequi <br>
                                 minus
                                 nihil
