--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+
+
 </head>
 
 <body>
@@ -346,7 +353,7 @@
                     <div class="legend-pic">
                         <div class="le-pic"> <img src="legends/gettyimages-493892123-612x612.jpg" alt=""></div>
                         <div class="legend-text ">
-                            <p>hroughout his career, Muller had scored a remarkable <br> Throughout his career, Muller
+                            <p>throughout his career, Muller had scored a remarkable <br> Throughout his career, Muller
                                 had scored a remarkable 582 goals in 669 appearances, </p>
                         </div>
 
@@ -381,21 +388,43 @@
 
 
         </article>
+        <div class="footer-section">
+
+            <div class="footer-heading">
+                <div class="footer-img">
+                    <img src="imgplayer/logo.png" alt="">
+                </div>
+                <div style="" class="german-lover">
+                    <h3> GERMAN LOVER</h3>
+
+                </div>
 
 
-        <!-- EXTRA -->
+
+            </div>
+        </div>
+        <div class="footer-section fontawsome">
+            <h3><a href="https://www.facebook.com/"> <i class="fab fa-facebook-square"></i></a>
+
+                <a href="https://discord.com/"> <i class="fab fa-discord"></i></a><a
+                    href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://telegram.org/"><i class="fab fa-telegram-plane"></i></a>
 
 
 
 
 
+            </h3>
 
-        <!-- EXTRA -->
-
+        </div>
 
         <footer>
             <h5>Copyright &#169 2021 Football UMME SALMA</h5>
         </footer>
+
+
+
+
 
 
 
