--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@
 
 
 
-
+                </div>
+                <div class="readmore">
+                    <div class="lcd"><a href="" style="color: white">READ MORE</a></div>
+                </div>
             </section>
             <!-- /* video section  finish*/
             /* video section finish */
@@ -387,6 +390,16 @@
             <!-- legendl finish -->
 
 
+            <!-- 
+        footer-section
+        
+        footer-section
+
+
+        footer-section
+        footer-section -->
+
+
         </article>
         <div class="footer-section">
 
@@ -421,12 +434,14 @@
         <footer>
             <h5>Copyright &#169 2021 Football UMME SALMA</h5>
         </footer>
+        <!-- 
+        footer-section
+        
+        footer-section
 
 
-
-
-
-
+        footer-section
+        footer-section -->
 
     </main>
 
